--- a/styles/main.css
+++ b/styles/main.css
@@ -163,7 +163,8 @@ footer {
 
 #blogs {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    justify-content: center;
 }
 
 #blogs .blog-img {
